# mlops-proyecto

./: LICENSE  Makefile  Pipfile  README.md  pyproject.toml
mlops_proyecto/: __init__.py  dataset.py  features.py  modeloClasificacionClima.py  plots.py
mlops_proyecto/modeling/: entrenamiento.py  predict.py  train.py
mlruns/0/: meta.yaml
mlruns/726182514906146730/: meta.yaml
mlruns/726182514906146730/896c64b1945640c4a4c3e1ed036d56fe/: meta.yaml
mlruns/726182514906146730/896c64b1945640c4a4c3e1ed036d56fe/metrics/: accuracy
mlruns/726182514906146730/896c64b1945640c4a4c3e1ed036d56fe/tags/: mlflow.runName  mlflow.source.git.commit  mlflow.source.name
notebooks/: .gitignore  first_analisis.ipynb.dvc
tests/: test_joaquim.py
